# Actix-Microservice

./: .env  .gitignore  Cargo.toml  Dockerfile  DockerfileX86  README.md  users.db.ron
.aws/: aws-cpu-task.json
.github/workflows/: aws.yml
rs-api-service/: Cargo.toml  Dockerfile  README.md
rs-api-service/chart/: config.yaml  values.yaml
rs-api-service/charts/rs-api-service/: .sops.yaml  config.yaml  values.yaml
rs-api-service/src/: main.rs  models.rs
rs-api-service/src/handlers/: api.rs  mod.rs
rs-auth-service/: .gitignore  Cargo.toml  Dockerfile
rs-auth-service/chart/: config.yaml  service-monitor.yaml  values.yaml
rs-auth-service/chart/templates/: _helpers.tpl  ingress.yaml  service.yaml  serviceaccount.yaml
rs-auth-service/charts/rs-auth-service/: config.yaml  values.yaml
rs-auth-service/charts/rs-auth-service/templates/: NOTES.txt  deployment.yaml
rs-auth-service/src/: main.rs  state.rs
rs-auth-service/src/handlers/: authenticate.rs  discovery.rs  identity_provider.rs  login.rs  mod.rs  token.rs  token_pass.rs
rs-auth-service/templates/: local.html
rs-cpu-service/: .gitignore  Cargo.toml  Dockerfile
rs-cpu-service/chart/: Chart.yaml  service-monitor.yaml  values.yaml
rs-cpu-service/chart/templates/: hpa.yaml  service.yaml
rs-cpu-service/src/: metrics.rs
rs-cpu-service/src/handlers/: mod.rs  task.rs
rs_api_service/: .gitignore  Cargo.toml  Dockerfile  README.md
rs_api_service/chart/: Chart.yaml
rs_api_service/chart/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml
rs_api_service/src/: auth_validator.rs  main.rs  token.rs
rs_auth_service/: .gitignore  Cargo.toml  Dockerfile  README.md
rs_auth_service/chart/: Chart.yaml  values.yaml
rs_auth_service/src/: auth_validator.rs  main.rs
rs_cpu_service/: .gitignore  Cargo.toml  Dockerfile  README.md
rs_cpu_service/chart/: config.yaml  values.yaml
rs_cpu_service/chart/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  serviceaccount.yaml
rs_cpu_service/src/: db.rs  main.rs  metrics.rs  state.rs
rs_cpu_service/src/handlers/: index.rs  metrics.rs  task.rs
rs_cpu_service/src/helpers/: metrics.rs  token.rs
src/: auth_validator.rs  client.rs  cookie.rs  db.rs  error.rs  jwt.rs  main.rs  models.rs  request.rs  state.rs  token.rs  user.rs
src/handlers/: api.rs  auth.rs  authenticate.rs  callback.rs  discovery.rs  identity.rs  identity_provider.rs  index.rs  local_server.rs  login.rs  mod.rs  signin.rs  token.rs  token_pass.rs
templates/: login.html  signin.html
(+28 files in other folders)
