[package]
name = "rs_cpu_service"
version = "0.1.0"
authors = ["pmagaz <magazpablo@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "3.3.2"
actix-http = "2.2.1"
serde = { version ="1" }
serde_qs ="0.8.5"
chrono = "0.4.19"
thiserror = "1.0"
dotenv = "0.15"
magic-crypt = "3.1.9"
prometheus = { version = "0.13", features = ["process"] }
lazy_static = "1.4"
futures = "0.3.17"